client/src/index.css
@import url("https://fonts.googleapis.com/css?family=Fira+Sans");

body {
  margin: 0;
  padding: 0;
  font-family: "Fira Sans", sans-serif;
}

ul {
  list-style: none;
}

/* ********** NAVBAR ************** */

.navbar {
  height: 90px;
  display: flex;
  position: relative;
  background: transparent;
}

.navbar-title {
  font-size: 2em;
  letter-spacing: 2px;
  color: navy;
}

.navbar-title:hover {
  color: lightblue;
  text-decoration: none;
}

.navbar ul {
  display: flex;
  margin: 0;
}

.navbar li {
  padding: 0 1.5em;
}

.nav-button {
  font-size: 1em;
  color: navy;
  padding-bottom: .4em;
  letter-spacing: 1px;
  border: none;
  background: transparent;
  cursor: pointer;
  padding-bottom: 2px;
}

.nav-button:hover {
  border-bottom: 1px solid navy;
}

.nav-item,
.nav-logout {
  color: navy;
  padding-bottom: 2px;
}

.nav-item:hover,
.nav-logout:hover {
  text-decoration: none;
  border-bottom: 1px solid navy;
}

.active-nav {
  color: teal;
}

/* ********** MODALS ************** */
.Modal.signup {
  width: 30vw;
  height: 45vh;
  margin: 10rem auto;
  background-color: rgb(2, 14, 68);
}

.Modal.signin {
  width: 30vw;
  height: 31vh;
  margin: 10rem auto;
  padding: 1em;
  background-color: rgb(2, 14, 68);
}

.modal-content {
  color: white;
  background-color: inherit;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0 auto;
}

.modal-form {
  display: flex;
  flex-direction: column;
}

.modal-form input {
  font-size: 1.1em;
  width: 20rem;
  margin: 0.5em auto;
}

.close-signup {
  position: relative;
  bottom: -.7rem;
}

.close-signin {
  position: relative;
  bottom: -.6rem;
}

::placeholder {
  padding-left: 0.5em;
}

.login-button {
  width: 10rem;
  margin: 0.5em auto;
}

.login-button:hover {
  background-color: black;
  color: white;
  cursor: pointer;
}

/* ********** LANDING ************** */
.landing-container {
  display: flex;
  flex-direction: column;
}

.landing-statement {
  font-size: 3em;
  text-align: center;
  padding-top: .3em;
  letter-spacing: 5px;
  color: navy
}

/* ********** CAROUSEL ************** */
.carousel {
  height: 80vh;
  width: 90vw;
  margin: 0 auto;
}

.carousel-city-name {
  z-index: 10;
  color: rgb(136, 135, 135);
  font-size: 1.5em;
  padding: .5em 0 0 .5em;
  text-align: left;
}

.carousel-arrow {
  font-size: 2.5em;
  color: white;
  cursor: pointer;
}

.left.carousel-arrow {
  position: relative;
  top: -53%;
  left: 1%;
}

.right.carousel-arrow {
  position: relative;
  top: -61%;
  left: 96.5%;
}

/* ********** PROFILE ************** */
.profile-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.profile-title {
  margin: 0.5em auto;
  letter-spacing: 1.5px;
}

.profile-edit {
  font-size: 0.3em;
  padding-left: 1em;
  cursor: pointer;
}

.profile-info {
  text-align: left;
  margin: 0 auto;
}

.profile-info p {
  letter-spacing: 1px;
}

.profile-posts {
  padding: 0;
}

.profile-form {
  display: flex;
  flex-direction: column;
}

.profile-form input {
  font-size: 1.1em;
  width: 20rem;
  margin: 0.5em auto;
}

.profile-form button {
  margin-bottom: 1em;
}

/* ********** HOMEPAGE ************** */
.homepage {
  display: flex;
  margin-top: .5em;
}

/* ********** CITIES LIST ************** */
.city-list-container {
  border: 1px solid black;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0 auto;
  height: 88vh;
  width: 37%;
}

.city-list-container h1 {
 font-size: 2.5em
}

.city-list {
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  overflow-y: auto;
}

.city-list-item {
  max-width: 93%;
  border: 1px solid black;
  padding: 1em;
  margin: 0.6em auto;
  cursor: pointer;
}

.city-list-item h2 {
  display: inline-block;
  padding-left: 0.5em;
}

.city-list-item img {
  max-height: 50%;
  max-width: 45%;
  border-radius: 5%;
}

.city-list-active {
  background-color: teal;
}

/* ********** CITY VIEW ************** */
.city-container {
  width: 60%;
  border: 1px solid black;
  margin: 0 auto;
}

.city-country-title {
  display: flex;
  margin: 1em auto;
  padding-bottom: 1em;
}

.city-country-name {
  width: 30%;
  margin: 0 auto;
}

.city-country-name h1 {
  font-size: 3em;
}

.city-country-name h3 {
  font-size: 2em;
}

.city-country-image {
  width: 45%;
  margin: 0 auto;
}

.city-country-image img {
  max-height: 100%;
  max-width: 100%;
  border-radius: 5%;
}

/* ********** POST CONTAINER ************** */
.post-container {
  border: 1px solid black;
  display: flex;
  flex-direction: column;
}

.post-list-header {
  margin: 0 1em;
  display: flex;
  justify-content: space-between;
}

.add-post {
  border: 1px solid black;
}

/* ********** POST LIST ************** */
.post-list {
  border: 1px solid green;
  max-height: 48vh;
  overflow-y: scroll;
}

/* ********** POST ************** */
.post {
  border: 1px solid red;
  max-width: 90%;
  margin: .5em auto;
}

.body-p a {
	color: #0254EB
}

.body-p a:visited {
	color: #0254EB
}

.body-p a.morelink {
	text-decoration:none;
	outline: none;
}

.morecontent span {
	display: none;
}

.body-p {
	background-color: #f0f0f0;
	margin: 10px;
}

/* ********** POST MODAL ************** */
.Modal.add-post {
  width: 30vw;
  height: 32vh;
  margin: 10rem auto;
  padding: 1em;
  background-color: rgb(2, 14, 68);
}

.new-post-text {
  margin-bottom: .5em;
}

/* ********** POST FORM ************** */
.post-form {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 1em;
}

.edit-post-title {
  margin: 1em;
}

.edit-post-text {
  margin: 1em;
  font-size: 1em;
  width: 80%;
  height: 4rem;
}

.edit-post-submit {
  max-width: 50%;
}

